--- a/src/styles/editor/EditListSelectionButtons.css
+++ b/src/styles/editor/EditListSelectionButtons.css
@@ -33,33 +33,28 @@
 }
 
 .edit-list-selection-new-item-button {
+  --button-col: var(--col-txt-alt);
+  --button-bg-col: var(--edit-section-highlight-color-secondary);
+  --button-bg-col-hover: var(--edit-section-highlight-color);
+  --button-padding: var(--editor-section-button-new-item-padding);
+  --button-radius: 50%;
+  --button-size: var(--editor-section-button-icon-larger-size);
+
   align-self: flex-start;
-
-  background-color: var(--edit-section-highlight-color-secondary);
-  color: var(--col-txt-alt);
-
   aspect-ratio: 1;
   min-height: 0;
-  border-radius: 50%;
-  border: none !important;
-
-  padding: var(--editor-section-button-new-item-padding);
-}
-
-.edit-list-selection-new-item-button .icon,
-.edit-list-selection-new-item-button svg {
-  height: var(--editor-section-button-icon-larger-size);
-  width: var(--editor-section-button-icon-larger-size);
 }
 
 .edit-list-selection-item-button {
-  background-color: var(--editor-section-button-color);
+  --button-col: var(--col-txt);
+  --button-col-hover: var(--edit-section-highlight-color-secondary);
+  --button-bg-col: var(--editor-section-button-color);
+  --button-bg-col-hover: var(--editor-section-button-color-secondary);
+  --button-padding: var(--editor-section-button-item-padding);
+  --button-radius: var(--button-border-radius);
 
-  padding: var(--editor-section-button-item-padding);
   line-height: 1;
   min-width: var(--editor-section-button-item-min-width);
-
-  border: none !important;
 
   /* https://stackoverflow.com/questions/7993067/text-overflow-ellipsis-not-working */
   white-space: nowrap;
@@ -67,59 +62,6 @@
   max-width: min(100%, 15em);
   display: block;
   overflow: hidden;
-}
-
-/* when hover is supported */
-@media not all and (hover: none) {
-  .edit-list-selection-new-item-button:hover {
-    background-color: var(--edit-section-highlight-color);
-    /* outline: var(--button-small-outline-size) solid
-      var(--edit-section-highlight-color); */
-  }
-
-  .edit-list-selection-item-button:hover {
-    background-color: var(--editor-section-button-color-secondary);
-    color: var(--edit-section-highlight-color-secondary);
-    /* outline: var(--button-small-outline-size) solid
-      var(--edit-section-highlight-color); */
-  }
-
-  .edit-list-selection-new-item-button:hover,
-  .edit-list-selection-item-button:hover {
-    /* outline: var(--button-small-outline-size) solid
-      var(--edit-section-highlight-color); */
-    box-shadow: var(--box-shadow);
-  }
-
-  .edit-list-selection-new-item-button:hover svg {
-    transform: scale(1.1);
-  }
-}
-
-.edit-list-selection-new-item-button:active,
-.edit-list-selection-item-button:active {
-  box-shadow: var(--box-shadow);
-}
-
-.edit-list-selection-new-item-button:active svg {
-  transform: scale(1);
-}
-
-.edit-list-selection-new-item-button:focus,
-.edit-list-selection-new-item-button:focus-visible {
-  background-color: var(--edit-section-highlight-color);
-  /* outline: var(--button-small-outline-size) solid */
-  /* var(--edit-section-highlight-color); */
-  outline: none;
-}
-
-.edit-list-selection-item-button:focus,
-.edit-panel .edit-panel-button:focus-visible {
-  background-color: var(--editor-section-button-color-secondary);
-  color: var(--edit-section-highlight-color-secondary);
-  /* outline: var(--button-small-outline-size) solid */
-  /* var(--edit-section-highlight-color); */
-  outline: none;
 }
 
 .edit-list-selection-new-item-button.current {
