--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -81,9 +81,13 @@
   /* --max-width: min(1440px, 100%); */
 
   /*Margins, gaps and paddings (+widths)*/
-  --page-padding-lr: 1.5rem;
+  --page-padding-lr: min(3vw, 1.5rem);
   --page-padding-ud: 1rem;
   --page-padding: var(--page-padding-ud) var(--page-padding-lr);
+
+  --header-padding-ud: 2vw;
+  --header-padding-lr: var(--page-padding-lr);
+  --header-padding: var(--header-padding-ud) var(--header-padding-lr);
 
   --editor-padding-ud: var(--page-padding-ud);
   --editor-padding: var(--editor-padding-ud) 0;
@@ -208,7 +212,7 @@
   /* Colors (background)*/
   --bg-col: var(--col-dark-1);
   --header-bg-col: var(--col-dark-2);
-  --header-dropdown-bg-col: var(--col-accent-1);
+  --header-dropdown-bg-col: var(--col-accent-2);
 
   --editor-bg-col: var(--col-dark-1);
   --editor-section-bg-col: var(--col-dark-2);
