feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the width of the optional photo in the cv

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -175,7 +175,7 @@
   --preview-page-title-font: "Playwrite IS"; */
 
   --preview-contacts-cols: 3;
-  --preview-photo-width: 30cqw;
+  /* --preview-photo-width: 30cqw; */
 
   /* --box-radius: max(6px, 0.9vmin); */
 
