feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the border-radius of the optional photo in the cv

--- a/src/styles/preview/PreviewPersonalInfoPanel.css
+++ b/src/styles/preview/PreviewPersonalInfoPanel.css
@@ -60,6 +60,7 @@
 
 .preview-personal-info-panel .photo-img {
   height: 100%;
+  /* height: auto; */
   width: var(--preview-photo-width);
   object-fit: cover;
   overflow: hidden;
