--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -176,7 +176,7 @@
 
   --preview-contacts-cols: 3;
   /* --preview-photo-width: 30cqw; */
-  --preview-photo-radius: 1cqw;
+  /* --preview-photo-radius: 1cqw; */
 
   /* --box-radius: max(6px, 0.9vmin); */
 
