feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the fontsize of the full name in the cv

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -155,7 +155,7 @@
   --preview-contacts-fontsize: 1.5cqw;
   --preview-contacts-gap: 0.5em;
 
-  --preview-full-name-fontsize: 7cqw;
+  /* --preview-full-name-fontsize: 7cqw; */
 
   --preview-title-fontsize: 3cqw;
   --preview-panel-title-fontsize: 3.5cqw;
