--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -157,7 +157,7 @@
 
   /* --preview-full-name-fontsize: 7cqw; */
 
-  --preview-title-fontsize: 3cqw;
+  /* --preview-title-fontsize: 3cqw; */
   --preview-panel-title-fontsize: 3.5cqw;
   --preview-about-me-fontsize: 2.5cqw;
 
