feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the fontsize of the about me text in the cv

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -159,7 +159,7 @@
 
   /* --preview-title-fontsize: 3cqw; */
   --preview-panel-title-fontsize: 3.5cqw;
-  --preview-about-me-fontsize: 2.5cqw;
+  /* --preview-about-me-fontsize: 2.5cqw; */
 
   --preview-main-fontsize: 2.5cqw;
   --preview-accent-fontsize: 3cqw;
