--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -161,8 +161,9 @@
   --preview-panel-title-fontsize: 3.5cqw;
   /* --preview-about-me-fontsize: 2.5cqw; */
 
-  --preview-main-fontsize: 2.5cqw;
+  /* --preview-main-fontsize: 2.5cqw; */
   --preview-accent-fontsize: 3cqw;
+  --preview-details-fontsize: 3cqw;
 
   --preview-page-item-list-padding-left: 1.8em;
   --preview-page-item-list-item-padding-top: 0.3em;
