--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -158,11 +158,11 @@
   /* --preview-full-name-fontsize: 7cqw; */
 
   /* --preview-title-fontsize: 3cqw; */
-  --preview-headings-fontsize: 3.5cqw;
+  /* --preview-headings-fontsize: 3.5cqw; */
   /* --preview-about-me-fontsize: 2.5cqw; */
 
   /* --preview-main-fontsize: 2.5cqw; */
-  --preview-accent-fontsize: 3cqw;
+  /* --preview-accent-fontsize: 3cqw; */
   --preview-details-fontsize: 3cqw;
 
   --preview-page-item-list-padding-left: 1.8em;
