feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the fontsize of the details text in the cv

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -163,7 +163,7 @@
 
   /* --preview-main-fontsize: 2.5cqw; */
   /* --preview-accent-fontsize: 3cqw; */
-  --preview-details-fontsize: 3cqw;
+  /* --preview-details-fontsize: 3cqw; */
 
   --preview-page-item-list-padding-left: 1.8em;
   --preview-page-item-list-item-padding-top: 0.3em;
