--- a/src/styles/preview/PreviewListWithDates.css
+++ b/src/styles/preview/PreviewListWithDates.css
@@ -2,5 +2,5 @@
   display: flex;
   flex-direction: column;
   gap: var(--preview-page-item-list-gap);
-  padding: var(--preview-page-item-list-gap) 0;
+  padding-top: var(--preview-page-item-list-gap);
 }
