--- a/src/styles/preview/PreviewPersonalInfoPanel.css
+++ b/src/styles/preview/PreviewPersonalInfoPanel.css
@@ -14,6 +14,11 @@
   grid-template-rows:
     min-content min-content min-content 1fr
     min-content 4fr;
+
+  --preview-page-gap-tb: max(
+    var(--preview-page-gap),
+    var(--preview-page-personal-info-gap)
+  );
 }
 
 .preview-personal-info-panel h3 {
@@ -43,7 +48,7 @@
   grid-area: fullName;
   display: flex;
   flex-wrap: wrap;
-  padding-top: var(--preview-page-gap);
+  padding-top: var(--preview-page-gap-tb);
   font-family: var(--preview-page-full-name-font);
 }
 
@@ -52,9 +57,9 @@
   width: min-content;
   height: 100%;
   max-height: 100%;
-  padding-top: var(--preview-page-gap);
-  padding-right: var(--preview-page-gap);
-  padding-bottom: var(--preview-page-gap);
+  padding-top: var(--preview-page-gap-tb);
+  padding-right: var(--preview-page-personal-info-gap);
+  padding-bottom: var(--preview-page-gap-tb);
   overflow: hidden;
 }
 
@@ -95,7 +100,7 @@
 
 .preview-personal-info-panel .text.aboutMe {
   grid-area: aboutMe;
-  padding: var(--preview-page-gap) 0;
+  padding: var(--preview-page-personal-info-gap) 0 var(--preview-page-gap-tb);
   font-size: var(--preview-page-about-me-fontsize);
   color: var(--preview-page-text-color);
 }
