--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -144,7 +144,8 @@
   /* --preview-page-format: "A4" */
   /* --preview-page-ar: var(--a4-ar); */
   /* --preview-page-lr-padding: 5cqw; */
-  --preview-page-gap: 3cqw;
+  --preview-page-gap: 2cqw;
+  --preview-page-personal-info-gap: 3cqw;
 
   /* --preview-page-accent-color: rgb(158, 11, 114); */
 
