feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the personal info gap in the cv

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -145,7 +145,7 @@
   /* --preview-page-ar: var(--a4-ar); */
   /* --preview-page-lr-padding: 5cqw; */
   /* --preview-page-gap: 2cqw; */
-  --preview-page-personal-info-gap: 3cqw;
+  /* --preview-page-personal-info-gap: 3cqw; */
 
   /* --preview-page-accent-color: rgb(158, 11, 114); */
 
