--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -169,7 +169,7 @@
 
   --preview-page-item-list-padding-left: 1.8em;
   --preview-page-item-list-item-padding-top: 0.3em;
-  --preview-page-item-list-gap: 0.5em;
+  /* --preview-page-section-items-gap: 0.5em; */
 
   /* --preview-page-headings-font: "Saira";
   --preview-page-details-font: "Fira Sans";
