--- a/src/styles/preview/PreviewPersonalInfoPanel.css
+++ b/src/styles/preview/PreviewPersonalInfoPanel.css
@@ -17,7 +17,8 @@
 
   --preview-page-gap-tb: max(
     var(--preview-page-gap),
-    var(--preview-page-personal-info-gap)
+    var(--preview-page-personal-info-gap),
+    var(--preview-page-section-items-gap)
   );
 }
 
