feat(EditPersonalizationPanel): add range input in EditPersonalizationPanel to control the section list gap in the cv

--- a/src/styles/preview/PreviewPersonalInfoPanel.css
+++ b/src/styles/preview/PreviewPersonalInfoPanel.css
@@ -18,7 +18,8 @@
   --preview-page-gap-tb: max(
     var(--preview-page-gap),
     var(--preview-page-personal-info-gap),
-    var(--preview-page-section-items-gap)
+    var(--preview-page-section-items-gap),
+    var(--preview-page-section-list-gap)
   );
 }
 
