--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -143,6 +143,7 @@
   /* --a4-ar: calc(1 / 1.41421); */
   /* --preview-page-format: "A4" */
   /* --preview-page-ar: var(--a4-ar); */
+  /* --preview-page-tb-padding: 10cqw; */
   /* --preview-page-lr-padding: 5cqw; */
   /* --preview-page-gap: 2cqw; */
   /* --preview-page-personal-info-gap: 3cqw; */
