--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -154,9 +154,10 @@
   --preview-page-details-color: var(--col-dark-3);
   --preview-page-text-color: var(--col-dark-4); */
 
-  --preview-contacts-padding: 2cqw;
+  /* --preview-page-contacts-tb-padding: 2cqw; */
+  /* --preview-page-contacts-lr-padding: 2cqw; */
   /* --preview-page-contacts-fontsize: 1.5cqw; */
-  --preview-contacts-gap: 0.5em;
+  --preview-page-contacts-gap: 0.5em;
 
   /* --preview-page-full-name-fontsize: 7cqw; */
 
@@ -178,7 +179,7 @@
   --preview-page-full-name-font: "Bitter";
   --preview-page-title-font: "Playwrite IS"; */
 
-  --preview-contacts-cols: 3;
+  --preview-page-contacts-cols: 3;
   /* --preview-page-photo-width: 30cqw; */
   /* --preview-page-photo-radius: 1cqw; */
 
